--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,13 +4,13 @@
   /* Base units */
   /* --vw is set by ThemeProvider */
 
-  --background: #fff0f5;;
-  --card: #ffe0eb;;
-  --foreground: #330011;;
-  --primary-cta: #ff0044;;
-  --secondary-cta: #ffffff;;
-  --accent: #ff3366;;
-  --background-accent: #cc0033;;
+  --background: #ffff00;
+  --card: #ffff00;
+  --foreground: #000000;
+  --primary-cta: #ffff00;
+  --secondary-cta: #000000;
+  --accent: #ffcc00;
+  --background-accent: #ffff00;
 
   /* text sizing - set by ThemeProvider */
   /* --text-2xs: clamp(0.465rem, 0.62vw, 0.62rem);
@@ -495,7 +495,7 @@ html {
 body {
   background-color: var(--background);
   color: var(--foreground);
-  font-family: var(--font-jetbrains-mono), sans-serif;
+  font-family: var(--font-inter-tight), sans-serif;
   position: relative;
   min-height: 100vh;
   overscroll-behavior: none;
@@ -508,5 +508,5 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: var(--font-jetbrains-mono), sans-serif;
+  font-family: var(--font-inter-tight), sans-serif;
 }
